--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,43 @@
+# Application Configuration
 spring.application.name=auth
+
+# Server Configuration
+server.port=8080
+server.servlet.context-path=/auth
+
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/auth_db
+spring.datasource.username=auth_user
+spring.datasource.password=auth_password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# Logging
+logging.level.org.springframework.security=DEBUG
+logging.level.com.aqryuz.auth=DEBUG
+
+# JWT Configuration
+app.jwt.secret=YourSecretKeyForJWTSigningMustBeLongEnoughForHS256Algorithm
+app.jwt.expiration=86400000
+app.jwt.refresh-expiration=604800000
+
+# TOTP Configuration
+app.totp.issuer=HomeLabAuth
+app.totp.period=30
+app.totp.digits=6
+
+# OAuth2 Configuration
+app.oauth2.client-id=homelab-client
+app.oauth2.client-secret=homelab-secret
+app.oauth2.redirect-uri=http://localhost:3000/callback
+app.oauth2.scope=openid,profile,email
+
+# Admin Configuration
+app.admin.default-username=admin
+app.admin.default-password=admin123
+app.admin.default-email=admin@homelab.local
