--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,18 @@
-# Use OpenJDK 21 as base image
+# Use Maven to build the application
+FROM maven:3.9.6-eclipse-temurin-21 AS build
+
+# Set working directory
+WORKDIR /app
+
+# Copy pom.xml and download dependencies
+COPY pom.xml .
+RUN mvn dependency:go-offline -B
+
+# Copy source code and build
+COPY src src
+RUN mvn clean package -DskipTests
+
+# Use OpenJDK 21 for runtime
 FROM openjdk:21-jdk-slim
 
 # Set working directory
@@ -24,6 +38,13 @@ RUN ./mvnw clean package -DskipTests && \
     addgroup --system spring && \
     adduser --system spring --ingroup spring
 
+# Copy the built jar from build stage
+COPY --from=build /app/target/*.jar app.jar
+
+# Create non-root user
+RUN addgroup --system spring && \
+    adduser --system spring --ingroup spring
+
 # Switch to non-root user
 USER spring:spring
 
@@ -31,4 +52,4 @@ USER spring:spring
 EXPOSE 8080
 
 # Run the application
-ENTRYPOINT ["java", "-jar", "target/auth-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-jar", "/app/app.jar"]
