feat(backend): add Spring configuration metadata and processor

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -101,6 +101,13 @@
 			<version>3.5.2</version>
 		</dependency>
 
+		<!-- Configuration Processor -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+
 		<!-- Lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
