--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -127,6 +127,13 @@
 			<scope>test</scope>
 		</dependency>
 		
+		<!-- OpenAPI Documentation -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+
 		<!-- Testcontainers -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
