fix(config): update admin default password for consistency

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -39,7 +39,7 @@ app.oauth2.scope=openid,profile,email
 
 # Admin Configuration
 app.admin.default-username=admin
-app.admin.default-password=admin123
+app.admin.default-password=admin
 app.admin.default-email=admin@homelab.local
 
 # OpenAPI Configuration
