--- a/backend/src/main/resources/application-docker.properties
+++ b/backend/src/main/resources/application-docker.properties
@@ -12,7 +12,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:auth_password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=false
@@ -40,5 +40,5 @@ app.oauth2.scope=${OAUTH2_SCOPE:openid,profile,email}
 
 # Admin Configuration
 app.admin.default-username=${ADMIN_USERNAME:admin}
-app.admin.default-password=${ADMIN_PASSWORD:admin123}
+app.admin.default-password=${ADMIN_PASSWORD:admin}
 app.admin.default-email=${ADMIN_EMAIL:admin@homelab.local}
