feat(backend): remove /auth context path and update API URLs
- Removed `/auth` context path from application configuration.
- Updated API endpoints to reflect new structure without context path.
- Adjusted frontend JavaScript to use new API base URL.
- Modified OpenAPI configuration and documentation accordingly.
- Updated Docker configuration for health checks.

BREAKING CHANGE: Clients must update endpoint URLs to remove `/auth` prefix.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       - homelab-auth-network
     restart: unless-stopped
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8080/auth/api/health" ]
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/api/health" ]
       interval: 30s
       timeout: 10s
       retries: 3
