--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=auth
 
 # Server Configuration
 server.port=8080
-server.servlet.context-path=/auth
+# Removed context-path - auth endpoints will be accessed directly via /api/auth/*
 
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/auth_db
