feat: add Security Settings, Application Settings, and User Management components
- Implemented SecuritySettings component for managing security configurations including TOTP, session management, and password policies.
- Created Settings component for application-wide settings management including application info, database, server, email, and notification settings.
- Developed UserManagement component for user management functionalities including user listing, editing, and status toggling.
- Updated API service to point to the local server for development.

--- a/backend/src/main/resources/application-docker.properties
+++ b/backend/src/main/resources/application-docker.properties
@@ -40,5 +40,5 @@ app.oauth2.scope=${OAUTH2_SCOPE:openid,profile,email}
 
 # Admin Configuration
 app.admin.default-username=${ADMIN_USERNAME:admin}
-app.admin.default-password=${ADMIN_PASSWORD:admin}
+app.admin.default-password=${ADMIN_PASSWORD:admin@123}
 app.admin.default-email=${ADMIN_EMAIL:admin@homelab.local}
