--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,10 +6,17 @@ server.port=8080
 # Removed context-path - auth endpoints will be accessed directly via /api/auth/*
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/auth_db
-spring.datasource.username=auth_user
-spring.datasource.password=auth_password
-spring.datasource.driver-class-name=org.postgresql.Driver
+# Spring Boot Docker Compose will automatically configure these properties
+# based on the compose.yml file. No need to specify connection details manually.
+# The following properties will be auto-configured:
+# - spring.datasource.url
+# - spring.datasource.username  
+# - spring.datasource.password
+# - spring.datasource.driver-class-name
+
+# Docker Compose Configuration
+spring.docker.compose.enabled=true
+spring.docker.compose.file=compose.yml
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
