--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,6 +18,11 @@ server.port=8080
 spring.docker.compose.enabled=true
 spring.docker.compose.file=compose.yml
 
+# DevTools Configuration (optional customization)
+# spring.devtools.restart.additional-paths=src/main/resources/static
+# spring.devtools.livereload.enabled=true
+# spring.devtools.livereload.port=35729
+
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
