--- a/.gitignore
+++ b/.gitignore
@@ -9,14 +9,14 @@
 *.tar.gz
 *.rar
 
-# Frontend testing artifacts  
-frontend/node_modules/
-frontend/test-results/
-frontend/playwright-report/
-frontend/playwright/.cache/
-frontend/coverage/
-frontend/.nyc_output/
-frontend/package-lock.json
+# UI Testing artifacts  
+ui-tests/node_modules/
+ui-tests/test-results/
+ui-tests/playwright-report/
+ui-tests/playwright/.cache/
+ui-tests/coverage/
+ui-tests/.nyc_output/
+ui-tests/package-lock.json
 
 # Maven
 target/
