feat(cors): implement CORS configuration for API

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -49,6 +49,13 @@ app.oauth2.client-secret=homelab-secret
 app.oauth2.redirect-uri=http://localhost:3000/callback
 app.oauth2.scope=openid,profile,email
 
+# CORS Configuration
+app.cors.allowed-origins=http://localhost:8080,http://127.0.0.1:8080
+app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+app.cors.allowed-headers=*
+app.cors.allow-credentials=true
+app.cors.max-age=3600
+
 # Admin Configuration
 app.admin.default-username=admin
 app.admin.default-password=admin@123
