--- a/app/src/main/resources/application-docker.properties
+++ b/app/src/main/resources/application-docker.properties
@@ -42,3 +42,10 @@ app.oauth2.scope=${OAUTH2_SCOPE:openid,profile,email}
 app.admin.default-username=${ADMIN_USERNAME:admin}
 app.admin.default-password=${ADMIN_PASSWORD:admin@123}
 app.admin.default-email=${ADMIN_EMAIL:admin@homelab.local}
+
+# CORS Configuration (production should use specific origins)
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:8080,https://auth.homelab.local}
+app.cors.allowed-methods=${CORS_ALLOWED_METHODS:GET,POST,PUT,DELETE,OPTIONS}
+app.cors.allowed-headers=${CORS_ALLOWED_HEADERS:*}
+app.cors.allow-credentials=${CORS_ALLOW_CREDENTIALS:true}
+app.cors.max-age=${CORS_MAX_AGE:3600}
