feat(security): implement account lockout mechanismg & exponential backoff

--- a/app/src/test/resources/application.properties
+++ b/app/src/test/resources/application.properties
@@ -15,6 +15,11 @@ app.jwt.secret=testSecretKeyForJWTSigningMustBeLongEnoughForHS256Algorithm
 app.jwt.expiration=86400000
 app.jwt.refresh-expiration=604800000
 
+# Security Configuration for testing
+app.security.max-failed-attempts=3
+app.security.lockout-duration-minutes=15
+app.security.progressive-lockout=true
+
 # TOTP Configuration for testing
 app.totp.issuer=TestHomeLabAuth
 app.totp.period=30
