--- a/app/src/main/resources/application-docker.properties
+++ b/app/src/main/resources/application-docker.properties
@@ -49,3 +49,8 @@ app.cors.allowed-methods=${CORS_ALLOWED_METHODS:GET,POST,PUT,DELETE,OPTIONS}
 app.cors.allowed-headers=${CORS_ALLOWED_HEADERS:*}
 app.cors.allow-credentials=${CORS_ALLOW_CREDENTIALS:true}
 app.cors.max-age=${CORS_MAX_AGE:3600}
+
+# Security Configuration
+app.security.max-failed-attempts=${SECURITY_MAX_FAILED_ATTEMPTS:5}
+app.security.lockout-duration-minutes=${SECURITY_LOCKOUT_DURATION_MINUTES:15}
+app.security.progressive-lockout=${SECURITY_PROGRESSIVE_LOCKOUT:true}
