--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -56,6 +56,11 @@ app.cors.allowed-headers=*
 app.cors.allow-credentials=true
 app.cors.max-age=3600
 
+# Security Configuration
+app.security.max-failed-attempts=5
+app.security.lockout-duration-minutes=15
+app.security.progressive-lockout=true
+
 # Admin Configuration
 app.admin.default-username=admin
 app.admin.default-password=admin@123
