feat(session): implement session management with sliding window and refresh capabilities

--- a/app/src/test/resources/application.properties
+++ b/app/src/test/resources/application.properties
@@ -14,6 +14,9 @@ logging.level.com.aqryuz.auth=INFO
 app.jwt.secret=testSecretKeyForJWTSigningMustBeLongEnoughForHS256Algorithm
 app.jwt.expiration=86400000
 app.jwt.refresh-expiration=604800000
+app.jwt.sliding-window-minutes=30
+app.jwt.enable-sliding-window=true
+app.jwt.max-session-duration-minutes=480
 
 # Security Configuration for testing
 app.security.max-failed-attempts=3
@@ -35,3 +38,10 @@ app.oauth2.scope=openid,profile,email
 app.admin.default-username=testadmin
 app.admin.default-password=testpass
 app.admin.default-email=test@example.com
+
+# CORS Configuration for testing
+app.cors.allowed-origins=http://localhost:3000,http://127.0.0.1:3000
+app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+app.cors.allowed-headers=*
+app.cors.allow-credentials=true
+app.cors.max-age=3600
