--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -37,6 +37,9 @@ logging.level.com.aqryuz.auth=DEBUG
 app.jwt.secret=YourSecretKeyForJWTSigningMustBeLongEnoughForHS256Algorithm
 app.jwt.expiration=86400000
 app.jwt.refresh-expiration=604800000
+app.jwt.sliding-window-minutes=30
+app.jwt.enable-sliding-window=true
+app.jwt.max-session-duration-minutes=480
 
 # TOTP Configuration
 app.totp.issuer=HomeLabAuth
