feat: Implement multi-device session management
- Add UserSession entity for comprehensive device tracking
- Create UserSessionRepository with session management queries
- Implement DeviceDetectionService for browser/device identification
- Add DeviceManagementController with REST endpoints for session management
- Enhance AppProperties with device management configuration
- Support for session limits, device tracking, and location monitoring
- Complete multi-device session management as final security enhancement

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -64,6 +64,11 @@ app.security.max-failed-attempts=5
 app.security.lockout-duration-minutes=15
 app.security.progressive-lockout=true
 
+# Device Management Configuration
+app.device-management.max-sessions-per-user=5
+app.device-management.track-location=true
+app.device-management.allow-multiple-devices=true
+
 # Admin Configuration
 app.admin.default-username=admin
 app.admin.default-password=admin@123
