--- a/app/src/test/resources/application.properties
+++ b/app/src/test/resources/application.properties
@@ -45,3 +45,8 @@ app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 app.cors.allowed-headers=*
 app.cors.allow-credentials=true
 app.cors.max-age=3600
+
+# Device Management Configuration for testing
+app.device-management.max-sessions-per-user=5
+app.device-management.track-location=false
+app.device-management.allow-multiple-devices=true
